--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import "url(http://fonts.googleapis.com/css?family=Montserrat: 400,700)";
 body {
   color: #555;
-  margin: 0;
+  margin: auto;
   font-family: 'Montserrat',  sans-serif;
 }
 #header {
