--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ body {
 }
 #footer{
   background-color: #2f2f2f;
-  padding: 50px 0;
-  margin: 0;
+  padding: 0;
 }
 .column {
   min-width: 300px;
